--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint .",
-    "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
-  },
-  "keywords": [
-    "GitHub",
-    "Actions",
-    "JavaScript"
-  ],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
-  },
-  "homepage": "https://github.com/actions/javascript-action#readme",
-  "dependencies": {
-    "@actions/core": "^1.2.5"
-  },
-  "devDependencies": {
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
-  }
+    "name": "configuration-file-releaser",
+    "version": "0.0.1",
+    "description": "A Github action for releasing a new version using configuration files from your project",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon --ignore dist/ --exec npm run all",
+        "lint": "eslint .",
+        "prepare": "ncc build src/main.js -o dist --source-map --license licenses.txt",
+        "test": "jest ./test --coverage",
+        "all": "npm run lint && npm run test && npm run prepare"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/thiagodonferreira/configuration-file-releaser.git"
+    },
+    "keywords": [
+        "GitHub",
+        "Actions",
+        "JavaScript"
+    ],
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/thiagodonferreira/configuration-file-releaser/issues"
+    },
+    "homepage": "https://github.com/thiagodonferreira/configuration-file-releaser#readme",
+    "dependencies": {
+        "@actions/core": "^1.2.5"
+    },
+    "devDependencies": {
+        "@vercel/ncc": "^0.31.1",
+        "eslint": "^8.0.0",
+        "jest": "^27.2.5"
+    }
 }
