--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,5 @@ jobs:
 
       # - uses: actions/checkout@v3
 
-      - uses: thiagodonferreira/configuration-file-releaser@main
+      - name: Configuration File Releaser
+        uses: thiagodonferreira/configuration-file-releaser@main
