--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
         "JavaScript"
     ],
     "engines": {
-        "node": ">=16.15.0"
+        "node": ">=16.14.0"
     },
     "bugs": {
         "url": "https://github.com/thiagodonferreira/configuration-file-releaser/issues"
     },
     "homepage": "https://github.com/thiagodonferreira/configuration-file-releaser#readme",
     "dependencies": {
-        "@actions/core": "^1.2.5"
+        "@actions/core": "1.8.2"
     },
     "devDependencies": {
-        "@vercel/ncc": "^0.31.1",
-        "eslint": "^8.0.0",
-        "jest": "^27.2.5"
+        "@vercel/ncc": "0.33.4",
+        "eslint": "8.15.0",
+        "jest": "28.1.0",
+        "nodemon": "2.0.16"
     }
 }
