--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     },
     "homepage": "https://github.com/thiagodonferreira/configuration-file-releaser#readme",
     "dependencies": {
-        "@actions/core": "1.8.2"
+        "@actions/core": "1.8.2",
+        "@actions/github": "5.0.3",
+        "@octokit/rest": "18.12.0"
     },
     "devDependencies": {
         "@vercel/ncc": "0.33.4",
