--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      # - uses: actions/checkout@v3
+      - name: Checking out
+        uses: actions/checkout@v3
 
       - name: Configuration File Releaser
         uses: thiagodonferreira/configuration-file-releaser@main
