--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,3 +15,5 @@ jobs:
 
       - name: Configuration File Releaser
         uses: thiagodonferreira/configuration-file-releaser@main
+        with:
+          repository: thiagodonferreira/configuration-file-releaser
