--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "@octokit/rest": "18.12.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "7.18.0",
+        "babel-jest": "28.1.0",
         "@vercel/ncc": "0.33.4",
         "eslint": "8.15.0",
         "jest": "28.1.0",
