--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: configuration-file-releaser
+name: new-version-decider
 description: A Github action for deciding if a new version should be generated using configuration files from your project
 branding:
   icon: anchor
