--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "configuration-file-releaser",
+    "name": "new-version-decider",
     "version": "0.0.4",
     "description": "A Github action for deciding if a new version should be generated using configuration files from your project",
     "author": "Thiago do N. Ferreira",
@@ -14,7 +14,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/thiagodonferreira/configuration-file-releaser.git"
+        "url": "git+https://github.com/thiagodonferreira/new-version-decider.git"
     },
     "keywords": [
         "GitHub",
@@ -26,9 +26,9 @@
         "node": ">=16.14.0"
     },
     "bugs": {
-        "url": "https://github.com/thiagodonferreira/configuration-file-releaser/issues"
+        "url": "https://github.com/thiagodonferreira/new-version-decider/issues"
     },
-    "homepage": "https://github.com/thiagodonferreira/configuration-file-releaser#readme",
+    "homepage": "https://github.com/thiagodonferreira/new-version-decider#readme",
     "dependencies": {
         "@actions/core": "1.8.2",
         "@actions/github": "5.0.3",
