--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
           loader: nodejs
           configurationFile: ./package.json
 
+      - run: node --print 'process.env'
+
       - name: Create Release on Github
         uses: softprops/action-gh-release@v1
         if: ${{steps.releaser.outputs.shouldGenerateANewVersion }}
