--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - id: releaser
-        name: Configuration File Releaser
+        name: New Version Decider
         uses: thiagodonferreira/new-version-decider@main
         with:
           loader: nodejs
