--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "new-version-decider",
     "version": "0.0.6",
     "description": "A Github action for deciding if a new version should be generated using configuration files from your project",
-    "author": "Thiago do N. Ferreira",
+    "author": "Thiago Ferreira",
     "license": "MIT",
     "main": "src/main.js",
     "scripts": {
@@ -14,7 +14,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/thiagodonferreira/new-version-decider.git"
+        "url": "git+https://github.com/thiagodnf/new-version-decider.git"
     },
     "keywords": [
         "GitHub",
@@ -26,9 +26,9 @@
         "node": ">=16.14.0"
     },
     "bugs": {
-        "url": "https://github.com/thiagodonferreira/new-version-decider/issues"
+        "url": "https://github.com/thiagodnf/new-version-decider/issues"
     },
-    "homepage": "https://github.com/thiagodonferreira/new-version-decider#readme",
+    "homepage": "https://github.com/thiagodnf/new-version-decider#readme",
     "dependencies": {
         "@actions/core": "1.8.2",
         "@actions/github": "5.0.3",
