--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     },
     "devDependencies": {
         "@babel/preset-env": "7.18.0",
-        "babel-jest": "28.1.0",
         "@vercel/ncc": "0.33.4",
+        "babel-jest": "28.1.0",
         "eslint": "8.15.0",
         "jest": "28.1.0",
-        "nodemon": "2.0.16"
+        "nodemon": "^2.0.19"
     }
 }
