--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Create Release on Github
         uses: softprops/action-gh-release@v1
-        if: ${{steps.releaser.outputs.shouldGenerateANewVersion == 'true' }}
+        if: ${{steps.releaser.outputs.newVersion == 'true' }}
         with:
           name: ${{ steps.releaser.outputs.currentVersion }}
           tag_name: v${{steps.releaser.outputs.currentVersion}}
