--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,14 +19,14 @@ jobs:
           loader: nodejs
           configurationFile: ./package.json
 
-      - name: Create Release on Github
-        uses: softprops/action-gh-release@v1
-        if: ${{steps.releaser.outputs.newVersion == 'true' }}
-        with:
-          name: ${{ steps.releaser.outputs.currentVersion }}
-          tag_name: v${{steps.releaser.outputs.currentVersion}}
-          # files: "*"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-  
+      # - name: Create Release on Github
+      #   uses: softprops/action-gh-release@v1
+      #   if: ${{steps.releaser.outputs.newVersion == 'true' }}
+      #   with:
+      #     name: ${{ steps.releaser.outputs.currentVersion }}
+      #     tag_name: v${{steps.releaser.outputs.currentVersion}}
+      #     # files: "*"
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
